--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,17 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.dailycred</groupId>
   <artifactId>dynamonito</artifactId>
-  <version>1.0</version>
+  <version>1.1</version>
   <dependencies>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk</artifactId>
       <version>1.3.24</version>
+    </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>elasticacheclusterclient</artifactId>
+      <version>1.0</version>
     </dependency>
     <dependency>
       <groupId>redis.clients</groupId>
@@ -20,6 +25,11 @@
       <artifactId>guava</artifactId>
       <version>13.0.1</version>
       <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
     </dependency>
   </dependencies>
 </project>
