--- a/pom.xml
+++ b/pom.xml
@@ -1,35 +1,88 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.dailycred</groupId>
   <artifactId>dynamonito</artifactId>
   <version>1.1</version>
+
   <dependencies>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk</artifactId>
       <version>1.3.24</version>
     </dependency>
+
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>elasticacheclusterclient</artifactId>
       <version>1.0</version>
     </dependency>
+
     <dependency>
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
       <version>2.1.0</version>
       <optional>true</optional>
     </dependency>
+
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>13.0.1</version>
       <optional>true</optional>
     </dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.12.3</version>
+        <configuration>
+          <parallel>none</parallel>
+          <threadCount>1</threadCount>
+          <excludes>
+            <exclude>**/*IntegrationTest.java</exclude>
+          </excludes>
+          <systemPropertyVariables combine.children="append">
+            <emma.rt.control>false</emma.rt.control>
+          </systemPropertyVariables>
+        </configuration>
+      </plugin>
+	
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.12.4</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+            <configuration>
+              <testFailureIgnore>false</testFailureIgnore>
+              <skipTests>${skip.integration.tests}</skipTests>
+              <includes>
+                <include>**/*IntegrationTest.java</include>
+              </includes>
+              <reportsDirectory />
+              <systemPropertyVariables combine.children="append">
+                <emma.rt.control>false</emma.rt.control>
+              </systemPropertyVariables>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
